tdf#121890 ODF custom shapes use left and top from viewBox

MS custom shapes use always zero for identifier left and top in
the formulas of the shape geometry. But custom shapes in ODF use
the left and top value from the svg:viewBox attribute, see
table 11 in section 19.171 draw:formula; part 1 of the spec.

Change-Id: Ief4b9d9b8797e165a494d049f32c5a46880044c2
Reviewed-on: https://gerrit.libreoffice.org/64704
Tested-by: Jenkins
Reviewed-by: Regina Henschel <rb.henschel@t-online.de>