svx/CppunitTest_svx_unit.mk
@@ -21,6 +21,7 @@ $(eval $(call gb_CppunitTest_set_include,svx_unit,\
 
 $(eval $(call gb_CppunitTest_add_exception_objects,svx_unit, \
 	svx/qa/unit/svdraw/test_SdrTextObject \
+	svx/qa/unit/customshapes \
 	svx/qa/unit/unodraw \
 	svx/qa/unit/xoutdev \
 	svx/qa/unit/XTableImportExportTest \
